syntax = "proto3";

package io.netifi.proteus.tracing;
import "google/protobuf/empty.proto";
import "rsocket/options.proto";

message Ping {
    string message = 1;
}

message Pong {
    string message = 1;
}

service PingPongService {
    rpc ping (Ping) returns (Pong) {}

    rpc pingStream (Ping) returns (stream Pong) {}

    rpc pingFireAndForget (Ping) returns (google.protobuf.Empty) {
        option (io.rsocket.rpc.options) = {
                  fire_and_forget: true
                };
    }
}